# todo

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
api/: .env  Cargo.toml
api/src/: db.rs  lib.rs  main.rs
api/src/api/: mod.rs  todos.rs
api/src/data/: mod.rs
api/src/data/commands/: create_todo_command.rs  delete_todo_command.rs  update_todo_command.rs
api/src/data/queries/: get_all_todos_query.rs  get_todo_by_id_query.rs  mod.rs
api/src/data/repositories/: mod.rs  todo_repository.rs
api/src/models/: mod.rs  role.rs  user.rs
backend/: Cargo.toml
backend/migrations/: 20230725104030_todo.sql
backend/src/: api.rs  db.rs  main.rs
data/: IDENTITY  MANIFEST-000005  OPTIONS-000007
database/: IDENTITY
frontend/: package-lock.json
frontend/src/routes/: +page.svelte  +page.ts
web/: package-lock.json  package.json  vite.config.ts
web/src/routes/: +page.svelte  +page.ts
